# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.655 2006/08/11 02:07:19 wolf31o2 Exp $

  11 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  We now only set the options for pkgcache if we are not using fetchonly. This
  should work around a problem where portage won't fetch the files if a binpkg
  already exists for the package.

  09 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Added code to make a backup of custom.conf before we edit it for the
  installer.

  29 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/livecdfs-update.sh:
  Remove sed from splash section, since it wasn't actually resolving the
  issue, anyway. Change the installer's dialog front-end code to simply run
  via sudo, since we don't need to worry about having the X DISPLAY setup or
  anything. This is catalyst 2.0, so you guys can all start rejoicing.

  26 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Fix my sed line so it actually applies correctly.

  25 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Added check for verbose, and add --verbose if found, or --quiet, to emerge
  options.

  21 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Fix the splash code so we have our splash theme on all 6 virtual consoles,
  as well as a possible fix for the read-only filesystem messages from
  /sbin/splash-functions.sh

  20 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Fix --fetchonly to actually work.

  19 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage2_template.spec:
  Added description for livecd/fsops to livecd-stage2's spec template.

  19 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,